--- a/src/BlazorBindings.Avalonia.ComponentGenerator/BlazorBindings.Avalonia.ComponentGenerator.csproj
+++ b/src/BlazorBindings.Avalonia.ComponentGenerator/BlazorBindings.Avalonia.ComponentGenerator.csproj
@@ -11,14 +11,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CommandLineParser" Version="2.9.1" />
-		<PackageReference Include="Microsoft.Build.Locator" Version="1.6.1" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.5.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.5.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Update="Nerdbank.GitVersioning" Version="3.6.133" />
+		<PackageReference Include="CommandLineParser" />
+		<PackageReference Include="Microsoft.Build.Locator" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" />
+		<PackageReference Update="Nerdbank.GitVersioning" />
 	</ItemGroup>
 
 </Project>
