--- a/samples/BlazorBindingsToDo/BlazorBindingsToDo.csproj
+++ b/samples/BlazorBindingsToDo/BlazorBindingsToDo.csproj
@@ -25,6 +25,8 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">23.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
+
+		<AndroidManifest>Platforms/Android/AndroidManifest.xml</AndroidManifest>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -45,10 +47,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
-		<PackageReference Include="SQLitePCLRaw.core" Version="2.1.6" />
-		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.6" />
-		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.6" />
+		<PackageReference Include="Microsoft.Maui.Controls" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" />
+		
+		<PackageReference Include="sqlite-net-pcl" />
+		<PackageReference Include="SQLitePCLRaw.core" />
+		<PackageReference Include="SQLitePCLRaw.bundle_green" />
+		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" />
 	</ItemGroup>
 
 	<ItemGroup>
