--- a/samples/BlazorBindingsXaminals/BlazorBindingsXaminals.csproj
+++ b/samples/BlazorBindingsXaminals/BlazorBindingsXaminals.csproj
@@ -45,6 +45,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Maui.Controls" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\..\src\BlazorBindings.Maui\BlazorBindings.Maui.csproj" />
 	</ItemGroup>
 
