--- a/samples/FlyoutPageSample/FlyoutPageSample.csproj
+++ b/samples/FlyoutPageSample/FlyoutPageSample.csproj
@@ -38,11 +38,19 @@
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
 
 		<!-- Images -->
+		<!-- Adding/commenting fixes error described in https://github.com/dotnet/maui/issues/5652 -->
+		<!--<MauiImage Include="Resources\AppIcon\appicon.svg" />-->
 
 		<!-- Custom Fonts -->
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Maui.Controls" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" />
 	</ItemGroup>
 
 	<ItemGroup>
