--- a/src/BlazorBindings.Avalonia/BlazorBindings.Avalonia.csproj
+++ b/src/BlazorBindings.Avalonia/BlazorBindings.Avalonia.csproj
@@ -16,29 +16,30 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\BlazorBindings.Core\BlazorBindings.Core.csproj" />
-		<PackageReference Include="Avalonia" Version="11.0.4" />
-		<PackageReference Include="Avalonia.Controls.ColorPicker" Version="11.0.4" />
-		<PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.4" />
-		<PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.0.4" />
-		<PackageReference Include="Avalonia.Diagnostics" Version="11.0.4" />
+		<PackageReference Include="Avalonia" />
+		<PackageReference Include="Avalonia.Controls.ColorPicker" />
+		<PackageReference Include="Avalonia.Controls.DataGrid" />
+		<PackageReference Include="Avalonia.Controls.ItemsRepeater" />
+		<PackageReference Include="Avalonia.Diagnostics" />
 
-		<PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1">
+		<PackageReference Include="DotNet.ReproducibleBuilds">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-rc.1.23419.4" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
 
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0-rc.1.23419.4" />
+		<PackageReference Include="Microsoft.Extensions.Logging" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\BlazorBindings.Core\BlazorBindings.Core.csproj" />
+	</ItemGroup>
+	
 	<ItemGroup>
 	  <Folder Include="Elements\Documents\" />
 	  <Folder Include="Elements\Layout\" />
 	  <Folder Include="Elements\Media\" />
 	</ItemGroup>
 	
-	
-
 </Project>
