Add author, set version to 0.1.0

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
 ﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Authors>Microsoft, Dreamescaper</Authors>
+    <Authors>Microsoft, Dreamescaper, Warapppa</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
 	<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
