--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: '8.0.x'
     - name: Restore dependencies
-      run: dotnet restore BlazorBindings.Avalonia.sln
+      run: dotnet restore BlazorBindingsAvalonia.sln
     - name: Build templates
       run: |
         cd templates
