Fix bug where generics cannot be properly handled when generating third-party libraries

--- a/src/BlazorBindingsAvalonia.ComponentGenerator/Properties/launchSettings.json
+++ b/src/BlazorBindingsAvalonia.ComponentGenerator/Properties/launchSettings.json
@@ -3,6 +3,10 @@
     "GenerateBlazorBindingsAvalonia": {
       "commandName": "Project",
       "commandLineArgs": "..\\..\\..\\..\\BlazorBindingsAvalonia\\BlazorBindingsAvalonia.csproj"
+    },
+    "UrsaGenerator": {
+      "commandName": "Project",
+      "commandLineArgs": "E:\\Ursa.Avalonia.Blazorbindings\\Ursa.Avalonia.Blazorbindings.csproj"
     }
   }
 }
