--- a/src/BlazorBindingsAvalonia/BlazorBindingsAvalonia.csproj
+++ b/src/BlazorBindingsAvalonia/BlazorBindingsAvalonia.csproj
@@ -16,11 +16,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Avalonia"/>
-		<PackageReference Include="Avalonia.Controls.ColorPicker"/>
-		<PackageReference Include="Avalonia.Controls.DataGrid"/>
-		<PackageReference Include="Avalonia.Controls.ItemsRepeater"/>
-		<PackageReference Include="Avalonia.Diagnostics"/>
+		<PackageReference Include="Avalonia" />
+		<PackageReference Include="Avalonia.Controls.ColorPicker" />
+		<PackageReference Include="Avalonia.Controls.DataGrid" />
+		<PackageReference Include="Avalonia.Controls.ItemsRepeater" />
+		<PackageReference Include="Avalonia.Diagnostics" />
 		<PackageReference Include="DotNet.ReproducibleBuilds">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -29,6 +29,8 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
 
 		<PackageReference Include="Microsoft.Extensions.Logging" />
+
+		<PackageReference Include="OneOf" />
 	</ItemGroup>
 
 	<ItemGroup>
