--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,8 +22,10 @@ jobs:
         dotnet-version: '8.0.x'
     - name: Restore dependencies
       run: dotnet restore Blazonia.sln
-    - name: Pack nugets
-      run: dotnet pack -o ./packages -c Release --no-restore
+    - name: Pack Blazonia nugets
+      run: dotnet pack .\src\Blazonia\Blazonia.csproj -o ./packages -c Release --no-restore
+    - name: PackBlazonia nugets
+      run: dotnet pack .\src\Blazonia.ComponentGenerator\Blazonia.ComponentGenerator.csproj -o ./packages -c Release --no-restore
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4
       with:
