--- a/src/Blazonia.UnitTests/Blazonina.UnitTests.csproj
+++ b/src/Blazonia.UnitTests/Blazonina.UnitTests.csproj
@@ -8,6 +8,13 @@
         <RootNamespace>Blazonina.UnitTests</RootNamespace>
         <TargetFramework>net9.0</TargetFramework>
         <EnablePreviewFeatures>true</EnablePreviewFeatures>
+        <!-- Code coverage defaults via coverlet -->
+        <CollectCoverage>true</CollectCoverage>
+        <CoverletOutput>$(MSBuildProjectDirectory)\TestResults\coverage\coverage</CoverletOutput>
+        <CoverletOutputFormat>cobertura,lcov</CoverletOutputFormat>
+        <!-- Exclude test assembly itself from coverage -->
+        <ExcludeByFile>**\*.g.cs;**\obj\**\*.cs;**\bin\**\*.cs</ExcludeByFile>
+        <Exclude>[xunit.*]*</Exclude>
 <!--    <EnableDefaultContentItems>false</EnableDefaultContentItems>-->
     </PropertyGroup>
 
@@ -33,6 +40,10 @@
         <PackageReference Include="xunit"/>
         <PackageReference Include="xunit.runner.visualstudio"/>
         <PackageReference Include="Avalonia.Headless.XUnit"/>
+        <PackageReference Include="coverlet.msbuild">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
 
         <ProjectReference Include="..\Blazonia\Blazonia.csproj"/>
     </ItemGroup>
