--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,9 @@ jobs:
     - name: Install .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.x'
+        dotnet-version: |
+          '8.0.x'
+          '9.0.x'
     - name: Restore dependencies
       run: dotnet restore Blazonia.slnx
     - name: Pack Blazonia nugets
