Update unit test project to include missing test files (Button, Slider, ToggleSwitch, StackPanel, Separator, ScrollViewer)

--- a/src/Blazonia.UnitTests/Blazonina.UnitTests.csproj
+++ b/src/Blazonia.UnitTests/Blazonina.UnitTests.csproj
@@ -27,6 +27,18 @@
         <Content Include="Elements\BorderTests.razor" />
         <None Remove="Elements\ElementTestBase.razor" />
         <Content Include="Elements\ElementTestBase.razor" />
+        <None Remove="Elements\ButtonTests.razor" />
+        <Content Include="Elements\ButtonTests.razor" />
+        <None Remove="Elements\SliderTests.razor" />
+        <Content Include="Elements\SliderTests.razor" />
+        <None Remove="Elements\ToggleSwitchTests.razor" />
+        <Content Include="Elements\ToggleSwitchTests.razor" />
+        <None Remove="Elements\StackPanelTests.razor" />
+        <Content Include="Elements\StackPanelTests.razor" />
+        <None Remove="Elements\SeparatorTests.razor" />
+        <Content Include="Elements\SeparatorTests.razor" />
+        <None Remove="Elements\ScrollViewerTests.razor" />
+        <Content Include="Elements\ScrollViewerTests.razor" />
         <None Remove="_Imports.razor" />
         <Content Include="_Imports.razor" />
     </ItemGroup>
