Update unit tests for consistency; refine resource handling and text property naming

--- a/src/Blazonia.UnitTests/Blazonina.UnitTests.csproj
+++ b/src/Blazonia.UnitTests/Blazonina.UnitTests.csproj
@@ -77,4 +77,9 @@
       <Folder Include="Components\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Empty.png" />
+      <AvaloniaResource Include="Empty.png" />
+    </ItemGroup>
+
 </Project>
