Refactor publish-pre-release.yml to simplify steps
Removed unnecessary restore step from the workflow.

--- a/.github/workflows/publish-pre-release.yml
+++ b/.github/workflows/publish-pre-release.yml
@@ -1,14 +1,11 @@
 name: Build Nuget Packages
 
-
 on:
   workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
       with:
@@ -18,12 +15,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
-    - name: Restore dependencies
-      run: dotnet restore Blazonia.sln
     - name: Pack Blazonia nugets
-      run: dotnet pack ./src/Blazonia/Blazonia.csproj -o ./packages -c Release --no-restore
+      run: dotnet pack ./src/Blazonia/Blazonia.csproj -o ./packages -c Release
     - name: PackBlazonia nugets
-      run: dotnet pack ./src/Blazonia.ComponentGenerator/Blazonia.ComponentGenerator.csproj -o ./packages -c Release --no-restore
+      run: dotnet pack ./src/Blazonia.ComponentGenerator/Blazonia.ComponentGenerator.csproj -o ./packages -c Release
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4
       with:
